feat/7: 함께 아는 친구 점수 주기